force-app/main/default/objects/ResumeParsingResult__e/ResumeParsingResult__e.object-meta.xml
<CustomObject>
    <description>Event fired after a candidate&apos;s resume has been parsed by an asynchronous job.</description>
    <label>Resume Parsing Result</label>
    <pluralLabel>Resume Parsing Results</pluralLabel>
</CustomObject>