force-app/main/default/objects/ResumeParsingResult__e/fields/CandidateId__c.field-meta.xml
<CustomField>
    <fullName>CandidateId__c</fullName>
    <description>The ID of the Candidate record that was processed.</description>
    <label>Candidate ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>