force-app/main/default/objects/ResumeParsingResult__e/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details, such as a success message or an error message.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>