force-app/main/default/objects/ResumeParsingResult__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The final status of the parsing job (e.g., SUCCESS, FAILED).</description>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>